test/files/neg/t7187.check
t7187.scala:9: error: _ must follow method; cannot follow () => String
  val t1f: Any       = foo() _ // error: _ must follow method
                          ^
t7187.scala:12: error: type mismatch;
 found   : String
 required: () => Any
  val t2a: () => Any = bar   // error: no eta-expansion of zero-arglist-methods
                       ^
t7187.scala:13: error: not enough arguments for method apply: (index: Int)Char in class StringOps.
Unspecified value parameter index.
  val t2b: () => Any = bar() // error: bar doesn't take arguments, so expanded to bar.apply(), which misses an argument
                          ^
t7187.scala:16: error: not enough arguments for method apply: (index: Int)Char in class StringOps.
Unspecified value parameter index.
  val t2e: Any       = bar() _ // error: not enough arguments for method apply
                          ^
t7187.scala:22: error: _ must follow method; cannot follow String
  val t3d: Any       = baz() _ // error: _ must follow method
                          ^
5 errors found
